[package]
name = "r4s"
version = "0.3.3-PRE"
description = "Manage and serve my blog"
authors = ["Rasmus Kaj <kaj@kth.se>"]
edition = "2021"

build = "src/build.rs"

[build-dependencies]
anyhow = "1.0.44"
lazy_static = "1.4.0"
ructe = { version = "0.16.0", features = ["sass", "warp03"] }
syntect = { version = "5.0.0", default-features = false, features = ["default-fancy"]}

[dependencies]
accept-language = "2.0"
anyhow = "1.0.44"
atom_syndication = "0.12.0"
base64 = "0.21.0"
chrono = { version = "0.4.19", default-features = false }
clap = { version = "4.0.18", features = ["derive", "env", "wrap_help"] }
csrf = "0.4.1"
diesel = { version = "2.0.2", features = ["chrono", "postgres", "network-address"] }
diesel-async = { version = "0.2.0", features = ["deadpool", "postgres"] }
dotenv = "0.15.0"
gravatar = "0.2.0"
i18n-embed = { version = "*", features = ["fluent-system"] }
i18n-embed-fl = "0.6.0"
fluent = "0.16.0"
intl-memoizer =  "0.5.1"
ipnetwork = "0.20.0" # must match version supported by diesel
lazy-regex = "2.2.2"
lazy_static = "1.4.0"
mime = "0.3.0"
png = "0.17.2"
pulldown-cmark = "0.9.0"
qr_code = "1.1.0"
reqwest = { version = "0.11.0", features = ["json", "blocking"] }
rust-embed = "*"
rust_icu_ucol = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slug = "0.1"
syntect = { version = "5.0.0", default-features = false, features = ["default-fancy"]}
textwrap = { version = "0.16.0", features = ["terminal_size"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.4", features = ["env-filter"] }
warp = "0.3.2"
