[package]
name = "r4s"
version = "0.3.11-PRE"
description = "Manage and serve my blog"
authors = ["Rasmus Kaj <rasmus@krats.se>"]
edition = "2021"

build = "src/build.rs"

[build-dependencies]
anyhow = "1.0.44"
lazy_static = "1.4.0"
ructe = { version = "0.18.0", features = ["sass", "warp03"] }
syntect = { version = "5.2.0", default-features = false, features = ["default-fancy"]}

[dependencies]
accept-language = "3.0.1"
anyhow = "1.0.44"
atom_syndication = "0.12.0"
base64 = "0.22.1"
chrono = { version = "0.4.19", default-features = false }
clap = { version = "4.5.4", features = ["derive", "env", "wrap_help"] }
csrf = "0.5.0"
diesel = { version = "2.2.2", features = ["chrono", "postgres", "network-address"] }
diesel-async = { version = "0.5", features = ["deadpool", "postgres"] }
dotenv = "0.15.0"
fluent = "0.16.0"
gravatar = "0.2.0"
i18n-embed = { version = "*", features = ["fluent-system"] }
i18n-embed-fl = "0.8.0"
intl-memoizer =  "0.5.1"
ipnetwork = { version = "0.21.1", features = ["serde"] }
lazy-regex = "3.0.0"
lazy_static = "1.4.0"
mime = "0.3.0"
png = "0.17.2"
pulldown-cmark = "0.12.2"
pulldown-cmark-escape = "0.11.0"
qr_code = "2.0.0"
reqwest = { version = "0.11.0", features = ["json", "blocking"] }
rust-embed = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slug = "0.1"
syntect = { version = "5.0.0", default-features = false, features = ["default-fancy"]}
textwrap = { version = "0.16.0", features = ["terminal_size"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.4", features = ["env-filter"] }
warp = "0.3.6"
