[package]
name = "r4s"
version = "0.5.2"
description = "Manage and serve my blog"
authors = ["Rasmus Kaj <rasmus@krats.se>"]
edition = "2021"

build = "src/build.rs"

[profile.dev]
debug = false

[build-dependencies]
anyhow = "1.0.44"
ructe = { version = "0.18.0", features = ["sass", "warp03"] }

[dependencies]
accept-language = "3.0.1"
anstyle = "1.0.13"
anyhow = "1.0.44"
arborium = { version = "2.3.2", features = [
  "lang-bash",
  "lang-cpp",
  "lang-css",
  "lang-go",
  "lang-html",
  "lang-java",
  "lang-javascript",
  "lang-json",
  "lang-markdown",
  "lang-python",
  "lang-rust",
  "lang-scss",
  "lang-xml"
] }
atom_syndication = "0.12.0"
base64 = "0.22.1"
bytes = "1.10.1"
chrono = { version = "0.4.19", default-features = false }
clap = { version = "4.5.4", features = ["derive", "env", "wrap_help"] }
csrf = "0.5.0"
diesel = { version = "2.3.2", features = ["chrono", "postgres", "network-address"] }
diesel-async = { version = "0.7.3", features = ["deadpool", "postgres"] }
dotenvy = "0.15.7"
fluent = "0.17.0"
gravatar = "0.2.0"
i18n-embed = { version = "0.16.0", features = ["fluent-system"] }
i18n-embed-fl = "0.10.0"
intl-memoizer =  "0.5.1"
ipnetwork = { version = "0.21.1", features = ["serde"] }
lazy-regex = "3.0.0"
mime = "0.3.0"
png = "0.18.0"
pulldown-cmark = "0.13.0"
pulldown-cmark-escape = "0.11.0"
qr_code = "2.0.0"
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
rust-embed = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slug = "0.1"
textwrap = { version = "0.16.0", features = ["terminal_size"] }
thiserror = "2.0.17"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.4", features = ["env-filter"] }
warp = { version = "0.4.2", features = ["server"] }
